[project]
name = "myvapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.4",
    "setuptools>=80.9.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.10.0",
    "vapi-server-sdk>=1.7.3",
    "requests>=2.32.5",
]
